--- a/05-description.Rmd
+++ b/05-description.Rmd
@@ -1,6 +1,6 @@
-# Description des données quantitatives et qualitatives
+# Description des données quantitatives et qualitatives test
 
-Ce deuxième chapitre regroupe quelques fonctions pour décrire numériquement et graphiquement les variables quantitatives et qualitatives. Des fonctions spécifiques doivent être utilisées relativement à la nature de la variable. 
+Ce deuxième chapitre regroupe quelques fonctions pour décrire numériquement et graphiquement les variables quantitatives et qualitatives. Des fonctions spécifiques doivent être utilisées relativement à la nature de la variable.
 
 ```{r echo=TRUE}
 
@@ -8,13 +8,13 @@ df <- read.csv("sport.csv", sep = ";", header = TRUE)
 str(df)
 ```
 
-On observe qu'il existe plusieurs types de variables. 
+On observe qu'il existe plusieurs types de variables.
 
 ## Description numérique
 
-### Variables qualitatives 
+### Variables qualitatives
 
-La variable "Sexe" est une variable qualitative nominale. Lorsque l'on regarde dans la base de données, on observe qu'elle est considérée comme une chaine de caractères. Il est dès lors possible de la transformer en facteur. Une situation similaire arrive avec la variable "Satisfaction" qui est une variable qualitative ordinale. Il est également possible de la transformer afin d'obtenir un facteur ordonné. Pour les deux cas, la transformation s'effectue grâce à la fonction `factor()`. Lorsque la variable est ordinale, des arguments doivent être ajouté afin de préciser qu'il s'agit d'un facteur ordonné et de donner l'ordre des niveaux. 
+La variable "Sexe" est une variable qualitative nominale. Lorsque l'on regarde dans la base de données, on observe qu'elle est considérée comme une chaine de caractères. Il est dès lors possible de la transformer en facteur. Une situation similaire arrive avec la variable "Satisfaction" qui est une variable qualitative ordinale. Il est également possible de la transformer afin d'obtenir un facteur ordonné. Pour les deux cas, la transformation s'effectue grâce à la fonction `factor()`. Lorsque la variable est ordinale, des arguments doivent être ajouté afin de préciser qu'il s'agit d'un facteur ordonné et de donner l'ordre des niveaux.
 
 ```{r echo=TRUE}
 
@@ -26,7 +26,8 @@ df$Satisfaction <- factor(df$Satisfaction, ordered = TRUE,
                                      "extremement_satisfait"))
 df$Satisfaction
 ```
-Pour les variables qualitatives, la description numérique classique est le tableau de contingence que l'on obtient avec la fonction `table()`. Il est possible de décrire chaque variable à la fois ou de décrire une variable en fonction d'une autre. 
+
+Pour les variables qualitatives, la description numérique classique est le tableau de contingence que l'on obtient avec la fonction `table()`. Il est possible de décrire chaque variable à la fois ou de décrire une variable en fonction d'une autre.
 
 ```{r echo=TRUE}
 
@@ -34,21 +35,23 @@ table(df$Sexe)
 table(df$Satisfaction)
 table(df$Sexe, df$Satisfaction)
 ```
-### Variables quantitatives 
 
-Les variables quantitatives sont généralement décrites à l'aide de: 
+### Variables quantitatives
 
-1. Mesures de tendance centrale: mode, moyenne, médiane
-1. Mesures de dispersion: étendue, espace interquartile, variance et écart-type
+Les variables quantitatives sont généralement décrites à l'aide de:
 
-La moyenne et la médiane peuvent se calculer directement avec les fonctions `mean()`et `median()` respectivement. Le mode d'une variable peut s'obtenir en analysant le tableau de contingence. Dans notre cas, on observe qu'il n'y a pas de mode étant donné qu'aucun âge apparaît plusieurs fois. 
+1.  Mesures de tendance centrale: mode, moyenne, médiane
+2.  Mesures de dispersion: étendue, espace interquartile, variance et écart-type
+
+La moyenne et la médiane peuvent se calculer directement avec les fonctions `mean()`et `median()` respectivement. Le mode d'une variable peut s'obtenir en analysant le tableau de contingence. Dans notre cas, on observe qu'il n'y a pas de mode étant donné qu'aucun âge apparaît plusieurs fois.
 
 ```{r echo=TRUE}
 mean(df$Age)
 median(df$Age)
 table(df$Age)
 ```
-L'étendue d'une variable peut s'obtenir en soustrayant la valeur maximale et la valeur minimale d'une variable. La variance et l'écart-type s'obtiennent directement avec les fonctions `var()`et `sd()`respectivement. L'espace interquartile, utilisé pour construire le boxplot, s'obtient grâce à la fonction `IQR()`. 
+
+L'étendue d'une variable peut s'obtenir en soustrayant la valeur maximale et la valeur minimale d'une variable. La variance et l'écart-type s'obtiennent directement avec les fonctions `var()`et `sd()`respectivement. L'espace interquartile, utilisé pour construire le boxplot, s'obtient grâce à la fonction `IQR()`.
 
 ```{r echo=TRUE}
 min(df$Age)
@@ -63,10 +66,9 @@ IQR(df$Age)
 
 ## Description graphique
 
-### Variables qualitatives 
+### Variables qualitatives
 
-Les variables qualitatives peuvent être représentées grâce à des graphiques en barre ou des graphiques en camembert. Les fonctions `barplot()`et `pie()`permettent de représenter les tableaux de contingence. Pour rappel, il est possible de sauver un objet dans l'environnement et de l'utiliser ensuite directement pour faire les graphes. C'est ce qui est proposé pour le tableau de contigence de la variable "Satisfaction". 
-
+Les variables qualitatives peuvent être représentées grâce à des graphiques en barre ou des graphiques en camembert. Les fonctions `barplot()`et `pie()`permettent de représenter les tableaux de contingence. Pour rappel, il est possible de sauver un objet dans l'environnement et de l'utiliser ensuite directement pour faire les graphes. C'est ce qui est proposé pour le tableau de contigence de la variable "Satisfaction".
 
 ```{r echo=TRUE}
 
@@ -80,9 +82,9 @@ barplot(tableSatisfaction, las=2)
 pie(tableSatisfaction)
 ```
 
-### Variables quantitatives 
+### Variables quantitatives
 
-Les variables quantitatives peuvent être représentées grâce à des histogrammes ou des boxplots. Les histogrammes permettent de représenter la fréquence de chaque valeur de la variable, tandis que les boxplots représente la distribution de la variable à l'aide des quartiles. Il est possible de spécifier des arguments dans la fonction graphiques afin de donner un titre ou de nomme un axe. 
+Les variables quantitatives peuvent être représentées grâce à des histogrammes ou des boxplots. Les histogrammes permettent de représenter la fréquence de chaque valeur de la variable, tandis que les boxplots représente la distribution de la variable à l'aide des quartiles. Il est possible de spécifier des arguments dans la fonction graphiques afin de donner un titre ou de nomme un axe.
 
 ```{r echo=TRUE}
 
