Updated to chapter 5
Je n'ai quasiment rien changé a part remplacer l'illustration du tableau au début par head au lieu de str pour être raccord au cours. A part ça il manque le calcul des quantiles, cependant l'IQR est montré donc je me dis que c'est peut être mieux comme ça? Sinon je peux le rajouter.

--- a/05-description.Rmd
+++ b/05-description.Rmd
@@ -5,10 +5,10 @@ Ce deuxième chapitre regroupe quelques fonctions pour décrire numériquement e
 ```{r echo=TRUE}
 
 df <- read.csv("sport.csv", sep = ";", header = TRUE)
-str(df)
+head(df)
 ```
 
-On observe qu'il existe plusieurs types de variables. 
+Avec la commande head on affiche les premières lignes du jeu de données que nous venons d'importer. On observe qu'il existe plusieurs types de variables. 
 
 ## Description numérique
 
@@ -34,6 +34,7 @@ table(df$Sexe)
 table(df$Satisfaction)
 table(df$Sexe, df$Satisfaction)
 ```
+
 ### Variables quantitatives 
 
 Les variables quantitatives sont généralement décrites à l'aide de: 
